Adding more on MSSM event selection

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -160,10 +160,11 @@ required.
 \subsection{Categorisation}
 \label{sec:hhh_selection_categories}
 In both channels a selection on the transverse mass, \mT,~between the electron/muon
-and missing transverse energy, defined as in equation \ref{eqn:hhh_selection_mt}, is applied.
+and missing transverse energy, defined as,
 \begin{equation}\label{eqn:hhh_selection_mt}
-m_{\text{T}} = \sqrt{2p_{\text{T}}E_{\text{T}}^{\text{miss}}(1-\cos{\Delta\phi})}
+m_{\text{T}} = \sqrt{2p_{\text{T}}E_{\text{T}}^{\text{miss}}(1-\cos{\Delta\phi})},
 \end{equation}
+is applied.
 In this eqation \pT~is the transverse momentum of the electron or muon, and $\Delta\phi$ the azimuthal
 angle between the light lepton and the missing transverse energy. The \mT~distributions for the \etau
 and \mutau channels, using the selections as
