--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -174,8 +174,10 @@ is not so sensitive to fake,nonisolated muons. The choice of isolation variable 
 driven mostly by simplicity and consistency with other \ac{CMS} analyses.
 
 \begin{figure}[h!]
-\subfloat[$S/\sqrt{B}$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/s_over_root_b_mt_m.pdf}}
-\subfloat[Size of error interval]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mt_muons_iso_errint.pdf}}
+\begin{center}
+\subfloat[$S/\sqrt{B}$]{\includegraphics[width=0.7\textwidth]{./MSSM/Figures/s_over_root_b_mt_m.pdf}}~\\
+\subfloat[Size of error interval]{\includegraphics[width=0.7\textwidth]{./MSSM/Figures/mt_muons_iso_errint.pdf}}
+\end{center}
 \caption{(a) The $S/\sqrt{B}$ for \Ztautau signal and (b) the size of the error interval on 
 the best--fit value of a maximum--likeihood fit to the \Ztautau signal strength,
 for various cut values of the $\Delta\beta$--corrected
@@ -190,9 +192,56 @@ the tracker--based relative isolation (solid squares).}
 A topological selection on the \mT~variable, 
 introduced in section \ref{sec:hhh_selection_categories}, is made on 
 events in the \mutau channel. This selection and the
-cut on hadronic tau isolation working point interfere 
+choice of hadronic tau isolation working point interfere 
 with each other and therefore they are optimised in a 2D--optimisation. 
-In this method 
+The pre--fit expected upper limits on $\sigma\times$BR for both gg$\phi$ and bb$\phi$
+production with decay into $\Pgt\Pgt$ at several mass points 
+in the 90 GeV -- 3.2 TeV range are used to do this. 
+Because of the use of such a wide range of signal masses, it
+is not possible to choose a selection that is optimal
+for every mass point. This is illustrated in figure \ref{fig:mssm_selection_mt_taumt}:
+figure \ref{fig:mssm_selection_mt_taumt}a shows the upper limit on $\sigma\times$BR for
+the gluon--gluon fusion production process, at a mass $m_{\phi} = 160$ GeV, with
+figures \ref{fig:mssm_selection_mt_taumt}b,c and d showing this upper limit at $m_{\phi} = 900$ GeV,
+$m_{\phi} = 1600$ GeV and $m_{\phi} = 2900$ GeV respectively. From these figures
+we can observe that looser selections are preferred for higher masses. This can be
+explained by considering the function of each of the selections. Tightening the hadronic
+tau isolation working point reduces the selection of fake taus and increases the proportion
+of backgrounds which contain real hadronic taus. The \mT~selection reduces
+the \Wjets background. As the backgrounds are concentrated at the lower
+end of the spectrum of mass--like discriminating variables, such tighter
+selections are preferred where signal and backgrounds overlap. However, at higher
+mass points the signal--sensitive range of the discriminating variable is 
+low in backgrounds and there is more benefit to loosening the selection
+to increase the signal efficiency than to keep the tighter selection
+to reduce an already low background.
+
+\begin{figure}[h!]
+\begin{center}
+\subfloat[$m_{\phi} = 160$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_160.0_range12.pdf}}
+\subfloat[$m_{\phi} = 900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_900.0_range12.pdf}}~\\
+\subfloat[$m_{\phi} = 1600$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_1600.0_range12.pdf}}
+\subfloat[$m_{\phi} = 2900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_2900.0_range12.pdf}}
+\end{center}
+\caption{Pre--fit expected limit on $\sigma\times$BR for the gg$\phi$ production process with decay into $\Pgt\Pgt$,
+s a function of tau isolation working point (from very loose to very very tight) and
+of \mT~ cut from \mT$<20$ GeV to \mt$<40$ GeV, normalised to the best limit in the plane, indicated by the asterisk. This is shown
+for $m_{\phi}$ = 160 GeV (a), 900 GeV (b), 1600 GeV (c) and 2900 GeV (d). The most optimal combination of \mT~selection and 
+hadronic tau isolation working point varies by mass point, with looser selections preferred for higher masses.}
+\label{fig:mssm_selection_mt_taumt}.
+\end{figure}
+
+Based on this information, for the analysis on the 2015 dataset the selection was optimised
+for mass points around 700-800 GeV. For the analysis on the 12.9 fb$^{-1}$ collected
+in the first half of 2016, the selection was further loosened by 10 GeV in \mT~cut
+and one step in hadronic tau isolation working point, to obtain the medium isolation working
+point selection combined with a selection on \mT$<40$ GeV.
+
+The choice of the hadronic tau \pT selection is driven by the effect on the low mass region:
+raising the \pT selection by 10 GeV from the minimum of 20 GeV does not affect the sensivity
+of the analysis for high mass points, while recovering some of the loss of loosening 
+tau isolation working point and \mT~cut. This is because when using \pT$>30$ GeV 
+fewer background events are selected.
 
 
 
@@ -312,407 +361,4 @@ NEED FIGURE OF NJETS AND NBJETS WITH SIGNAL ON!
 \subsection{Results}
 \label{sec:mssm_combination_results}
 
-\section{Overview of uncertainties}
-\label{sec:mssm_uncs_overview}
-The systematics that are applied are summarised in
-table \ref{tab:SystematicUncertainties_mt} for the $\mu\tau_h$
-channel, in table \ref{tab:SystematicUncertainties_et} for the $e\tau_h$ channel,
-in table \ref{tab:SystematicUncertainties_tt} for the $\tau_h\tau_h$ channel and
-in table \ref{tab:SystematicUncertainties_em} for the $e\mu$ channel. Additionally,
-the systematic uncertainties for the $Z\rightarrow\mumu$ control region are shown
-in table \ref{tab:SystematicUncertainties_zmm}.
-
-\begin{table}[!h]
-\begin{center}
-\caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
-or background events in the $\mu \tau_{h}$ channel. Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
- {\scriptsize
- \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
-     & \multicolumn{8}{|c}{Event yield uncertainty by event category} &  \\
-    \hline
-\textbf{ Process }
-    & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
-     & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
-    All from MC    & 6.2\%  &6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
-    All from MC & 0--1\% & 0--2\% & 0--1\% & 0--1\%& 0--12\% & 3--11\% & 0--15\% & 0--14\% & Fully correlated \\
-    \hline
-    \multicolumn{10}{l}{\MET \textbf{scale} }\\
-    ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ, VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
-    \multicolumn{4}{l}{\MET \textbf{resolution}} \\
-    ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ,VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Muon identification and trigger} }\\
-    All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Tau-lepton identification}}\\
-    ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
-    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Corr. between cats, uncorr. between chns    \\
-    \hline
-    \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
-    All from MC & 0--3\% & 0--3\% & 0--3\% & 0--2\% & 1--3\% &  0--3\%& 0--3\% & 0--3\%& Fully correlated\\
-    W &  &  &  &  & 4\% & 4\% & 6\% & 6\%& Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
-    All from MC & & & & & 1--7\% & & & & Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
-    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
-    \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
-    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
-    TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
-    \hline
-    \multicolumn{10}{l}{\textbf{DY reweighting } }\\
-    ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
-    W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
-    ZL,ZJ       & 4\% & 4\% & 4\% & 4\% & 4\%  & 4\% & 4\% & 4\% & Fully correlated              \\
-    ZTT         &  & 4\% & 4\% & 4\% &  & 4\% & 4\% & 4\% & Fully correlated              \\
-   \multicolumn{10}{l}{ $Z\to\Pgt\Pgt$\textbf{: $Z\to\Pgt\Pgt / Z\to\Pgm\Pgm$ extrapolation } } \\
-    ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\cPqt\cPaqt$}\\
-    TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
-    \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
-    VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
-   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pgm\Pgm$: $\Pgm$ \textbf{misidentified as} $\tau_{h}$ }\\
-    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% &Corr. between cats, uncorr. between chns        \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
-    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Corr. between cats, uncorr. between chns  \\
-    \hline
-    \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
-    W & 2\% & 2\% & & &11\% &11\% & & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W OS/SS ratio (syst) } }\\
-    W & 8\% & 8\% & & &10\% &10\% & & &Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W low/high} $m_{T}$ \textbf{ratio (stat)}}\\
-    W & 2\% & & 2 \% & &14\% & & 14\% & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W low/high} $m_{T}$ \textbf{ratio (syst)} }\\
-    W & 20\% & &20\% & & 20\% & & 20\% & & Fully uncorrelated \\
-    %\multicolumn{10}{l}{\textbf{W b-tag extrap (stat)}}\\
-    %W &  & &  & &12\% & 8\%& 22\% & 14\%& Fully uncorrelated \\
-    %\multicolumn{10}{l}{\textbf{W b-tag extrap (syst)} }\\
-    %W &  & & & & 10\% & & 10\% & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{QCD OS/SS ratio (syst) }}\\
-    QCD & 4\% & 4\% & & & 60\% & 60\% & & &Fully uncorrelated \\
-    \hline
-\end{tabular}
-}
-\label{tab:SystematicUncertainties_mt}
-\end{center}
-\end{table}
-
-
-\begin{table}[!h]
-\begin{center}
-\caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
-or background events in the $e \tau_{h}$ channel. Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
- {\scriptsize
- \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
-     & \multicolumn{8}{|c}{Event yield uncertainty by event category} &  \\
-    \hline
-\textbf{ Process }
-    & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
-     & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
-    All from MC    & 6.2\%  & 6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
-    All from MC & 0--1\% & 0--1\% & 0--2\% & 0--1\%& 1--14\% & 0--12\% & 0--15\% & 0--15\% & Fully correlated \\
-    \hline
-    \multicolumn{10}{l}{\MET \textbf{scale}}\\
-    ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
-    \multicolumn{10}{l}{\MET \textbf{resolution}} \\
-    ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ          \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Electron identification and trigger} }\\
-    All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Tau-lepton identification}}\\
-    ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
-    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Corr. between cats, uncorr. between chns    \\
-    \hline
-    \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
-    All from MC & 0--3\% & 0--3\% & 0--4\% & 0--4\% & 1--4\% & 0--2\% & 0--2\% & 0--2\% & Fully correlated\\
-    W &  &  &  &  & 5\% & 2\% & 10\% & 3\% & Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
-    All from MC & & & & & 0--3\% & & & & Fully correlated\\
-    \hline
-    \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
-    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
-    \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
-    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
-    TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
-    \hline
-    \multicolumn{10}{l}{\textbf{DY reweighting } }\\
-    ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
-    W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
-    \hline
-    \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
-    ZL,ZJ       & 4\% & 4\% & 4\% & 4\% & 4\%  & 4\% & 4\% & 4\% & Fully correlated              \\
-    ZTT         &  & 4\% & 4\% & 4\% &  & 4\% & 4\% & 4\% & Fully correlated              \\
-   \multicolumn{10}{l}{ $Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{ extrapolation} } \\
-    ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\cPqt\cPaqt$}\\
-    TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
-    \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
-    VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
-   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pe\Pe$: $\Pe$ \textbf{misidentified as} $\tau_{h}$ }\\
-    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% & Corr. between cats, uncorr. between chns       \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
-    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Corr. between cats, uncorr. between chns       \\
-    \hline
-    \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
-    W & 2\% & 2\% & & &14\% &14\% & & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W OS/SS ratio (syst) } }\\
-    W & 8\% & 8\% & & &10\% &10\% & & &Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W low/high} $m_{T}$ \textbf{ratio (stat)}}\\
-    W & 2\% & & 2 \% & &17\% & & 17\% & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{W low/high} $m_{T}$ \textbf{ratio (syst)} }\\
-    W & 20\% & &20\% & & 20\% & & 20\% & & Fully uncorrelated \\
-    %\multicolumn{10}{l}{\textbf{W b-tag extrap (stat)}}\\
-    %W &  & &  & &11\% &14\% & 21\% & 16\%& Fully uncorrelated \\
-    %\multicolumn{10}{l}{\textbf{W b-tag extrap (syst)} }\\
-    %W &  & & & & 10\% & & 10\% & & Fully uncorrelated \\
-    \multicolumn{10}{l}{\textbf{QCD OS/SS ratio (syst) }}\\
-    QCD & 12\% & 12\% & & & 60\% & 60\% & & &Fully uncorrelated \\
-    \hline
-\end{tabular}
-}
-\label{tab:SystematicUncertainties_et}
-\end{center}
-\end{table}
-
-
-\begin{table}[!h]
-\begin{center}
-\caption{Systematic uncertainties that affect the estimated number of signal
-or background events in the $\tau_{h} \tau_{h}$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
-{\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
-     & \multicolumn{2}{|c}{Event yield uncertainty by event category} & \\
-    \hline
-    Process & No b-tag & B-tag & Correlation                   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
-    All from MC      & 6.2\%      & 6.2\%  & Fully correlated                           \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Jet energy scale}} \\
-    All from MC      & 0--4\%      & 0--9\%  & Fully correlated                    \\
-    \hline
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
-    ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
-    TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
-    \hline
-    \multicolumn{4}{l}{\MET \textbf{resolution}} \\
-    ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
-    TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
-    \hline
-    \multicolumn{4}{l}{Tau-lepton identification and trigger} \\
-    ZTT,TTT,VVT, signal         & 10\%    & 10\%  & Fully correlated                      \\
-    ZTT,TTT,VVT, signal         & 9.2\%     & 9.2\%   & Correlated between categories, uncorrelated between channels \\
-    \hline
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency} }\\
-    All from MC   & 0--4\%     & 0--11\%  & Fully correlated                  \\
-    \hline
-   \multicolumn{4}{l}{\textbf{B-mistag rate}} \\
-    All from MC    &  0--1\%    & 0--12\%  & Fully correlated                  \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Tau-lepton energy scale}} \\
-    ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels                       \\
-    \hline
-    \multicolumn{4}{l}{\textbf{High} $P_{T}$ $\tau_h$ \textbf{ID efficiency}} \\
-    ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{DY reweighting } } \\
-    ZTT       & shape      & shape & Fully correlated                       \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting } } \\
-    TTT,TTJ & shape & shape & Fully correlated                  \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production}}\\
-    ZL,ZJ       & 4\%      & 4\%  & Fully correlated                    \\
-    \hline
-    \multicolumn{4}{l}{$Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{: extrapolation}}\\
-    ZTT         & 3\%        & 5\%  & Fully uncorrelated                   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
-    TTT,TTJ        & 6\%       & 6\%  & Fully correlated                       \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}}\\
-    VVT,VVJ &  5\%        & 5\%       & Fully correlated                        \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ\to\Pe\Pe$: $\Pe$\textbf{ misidentified as }$\tau_{h}$}\\
-    ZL & 10\%     & 10\%       & Correlated between categories, uncorrelated between channels                        \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$}\\
-    ZJ,W,TTJ & 20\%     & 20\%       & Correlated bewteen categories, uncorrelated between channels     \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (stat) }} \\
-    QCD  & 2\% & 20\%  & Fully uncorrelated\\
-    \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (syst) }} \\
-    QCD  & 12\% & 14\%  & Fully uncorrelated\\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
-    W & 4\% & 4\% & Fully correlated \\
-\end{tabular}}
-\label{tab:SystematicUncertainties_tt}
-\end{center}
-\end{table}
-
-
-\begin{table}[!h]
-\begin{center}
-\caption{Systematic uncertainties that affect the estimated number of signal
-or background events in the $e\mu$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
-{\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
-     & \multicolumn{2}{|c}{Event yield uncertainty by event category} &   \\
-    \hline
-    \textbf{Process}
-    &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
-    All from MC      & 6.2\%      & 6.2\% & Fully correlated                            \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
-    All from MC   & 0--1\% & 1--69\% &Fully correlated \\
-    \hline
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
-    ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
-    TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
-    \hline
-   \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
-    ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
-    TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
-    \hline
-    \multicolumn{4}{l}{\textbf{Electron identification and trigger}}\\
-    All from MC       & 2\%        & 2\% & Fully correlated                              \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Muon identification and trigger}  }\\
-    All from MC      & 2\%     & 2\%  & Fully correlated                      \\
-    \hline
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
-    All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
-    \hline
-    \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
-    All from MC      &     & 0--10\% & Fully correlated                    \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Electron energy scale}} \\
-    ZTT,signal      & shape      & shape  & Fully correlated                \\
-    \hline
-    \multicolumn{4}{l}{\textbf{DY reweighting }}\\
-     ZTT       & shape      & shape & Fully correlated                       \\
-   \hline
-    \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting}}\\
-    TT & shape & shape  & Fully correlated                 \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
-    ZLL      & 4\%      & 4\%  & Fully correlated                   \\
-    \hline
-    \multicolumn{4}{l}{$Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{: extrapolation} }\\
-     ZTT        & 3\%        & 5\%   & Fully uncorrelated                      \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
-    TT        & 6\%       & 6\% & Fully correlated                        \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
-    VV        & 5\%       & 5\% & Fully correlated                       \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet }}\\
-    QCD & 23\% & 34\% & Fully uncorrelated\\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
-    W+jets & 4\% & 4\% & Fully correlated\\
-\end{tabular}}
-\label{tab:SystematicUncertainties_em}
-\end{center}
-\end{table}
-
-\begin{table}[!h]
-\begin{center}
-\caption{Systematic uncertainties that affect the estimated number of
-or background events in the $Z\rightarrow\mu\mu$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
-{\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
-     & \multicolumn{2}{|c}{Event yield uncertainty by event category} &   \\
-    \hline
-    \textbf{Process}
-    &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
-    All from MC (not ZL)     & 6.2\%      & 6.2\% & Fully correlated                            \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
-    All from MC   & 0--1\% & 1--69\% &Fully correlated \\
-    \hline
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
-    ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
-    TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
-    \hline
-   \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
-    ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
-    TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
-    \hline
-    \multicolumn{4}{l}{\textbf{Muon identification and trigger}}\\
-    All from MC       & 2--4\%        & 2--4\% & Fully correlated                              \\
-    \hline
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
-    All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
-    \hline
-    \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
-    All from MC      &     & 0--10\% & Fully correlated                    \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
-    TT        & 6\%       & 6\% & Fully correlated                        \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
-    VV        & 5\%       & 5\% & Fully correlated                       \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
-    W+jets & 4\% & 4\% & Fully correlated\\
-\end{tabular}}
-\label{tab:SystematicUncertainties_zmm}
-\end{center}
-\end{table}
 
