--- a/preamble.tex
+++ b/preamble.tex
@@ -91,6 +91,7 @@
 \newcommand{\kT}{$k_{\text{T}}$}
 \newcommand{\ET}{$E_{\text{T}}$}
 \newcommand{\mT}{$m_{\text{T}}$}
+\newcommand{\mTtot}{$m_{\text{T}}^{\text{tot}}$}
 \newcommand{\MET}{$E_{\text{T}}^{\text{miss}}$}
 \DeclareRobustCommand{\protonproton}{\Pproton\Pproton\xspace}
 
